--- a/wild5/package.json
+++ b/wild5/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.10.0",
     "react": "16.8.3",
     "react-native": "0.59.4"
   },
