--- a/wild5/package.json
+++ b/wild5/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^5.10.0",
     "react": "16.8.3",
-    "react-native": "0.59.4"
+    "react-native": "0.59.4",
+    "react-native-router-flux": "^4.0.6"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
