--- a/wild5/package.json
+++ b/wild5/package.json
@@ -11,20 +11,9 @@
     "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-
-    "react-native-router-flux": "^4.0.6"
-
-=======
     "react-native-router-flux": "^4.0.6",
->>>>>>> master
-    "react-native-modal": "^9.0.0"
-=======
-    "react-native-button": "^2.3.0",
     "react-native-modal": "^9.0.0",
-    "react-native-router-flux": "^4.0.6"
->>>>>>> Stashed changes
+    "react-native-button": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
