--- a/wild5/package.json
+++ b/wild5/package.json
@@ -11,9 +11,10 @@
     "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
-    "react-native-router-flux": "^4.0.6",
+    "react-native-button": "^2.3.0",
     "react-native-modal": "^9.0.0",
-    "react-native-button": "^2.3.0"
+    "react-native-router-flux": "^4.0.6",
+    "toggle-switch-react-native": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
