--- a/wild5/package.json
+++ b/wild5/package.json
@@ -14,7 +14,7 @@
     "react-native-button": "^2.3.0",
     "react-native-modal": "^9.0.0",
     "react-native-router-flux": "^4.0.6",
-    "toggle-switch-react-native": "^2.0.2"
+    "toggle-switch-react-native": "^2.0.2",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-swiper": "^1.5.14"
 
