--- a/wild5/package.json
+++ b/wild5/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo": "^32.0.6",
     "firebase": "^5.10.0",
     "proptypes": "^1.1.0",
     "react": "16.8.3",
