--- a/wild5/package.json
+++ b/wild5/package.json
@@ -16,6 +16,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-simple-stepper": "^2.1.3",
     "react-native-swiper": "^1.5.14",
     "toggle-switch-react-native": "^2.0.2"
   },
