--- a/wild5/package.json
+++ b/wild5/package.json
@@ -8,14 +8,19 @@
   },
   "dependencies": {
     "firebase": "^5.10.0",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-button": "^2.3.0",
+    "react-native-camera": "^2.8.0",
     "react-native-modal": "^9.0.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
+    "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2"
   },
   "devDependencies": {
