--- a/wild5/package.json
+++ b/wild5/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.59.4",
     "react-native-button": "^2.3.0",
     "react-native-modal": "^9.0.0",
+    "react-native-pedometer": "0.0.7",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
