--- a/wild5/package.json
+++ b/wild5/package.json
@@ -13,11 +13,13 @@
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-button": "^2.3.0",
+    "react-native-camera": "^2.8.0",
     "react-native-modal": "^9.0.0",
     "react-native-pedometer": "0.0.7",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
     "toggle-switch-react-native": "^2.0.2"
   },
