--- a/wild5/package.json
+++ b/wild5/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
+    "native-base": "^2.12.1",
     "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
