--- a/wild5/package.json
+++ b/wild5/package.json
@@ -22,6 +22,7 @@
     "react-native-simple-stepper": "^2.1.3",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
+    "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2"
   },
   "devDependencies": {
