--- a/wild5/package.json
+++ b/wild5/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd": "^3.18.1",
+    "entypo": "^2.1.0",
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
     "native-base": "^2.12.1",
@@ -22,6 +24,7 @@
     "react-native-simple-stepper": "^2.1.3",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
+    "react-native-vector-icons": "^6.4.2",
     "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2"
   },
