--- a/wild5/package.json
+++ b/wild5/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.12.1",
     "proptypes": "^1.1.0",
     "react": "16.8.3",
+    "react-chartjs-2": "^2.7.6",
     "react-native": "0.59.4",
     "react-native-button": "^2.3.0",
     "react-native-camera": "^2.8.0",
