--- a/wild5/package.json
+++ b/wild5/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "antd": "^3.18.1",
+    "chart.js": "^2.8.0",
     "entypo": "^2.1.0",
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
