--- a/wild5/package.json
+++ b/wild5/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.59.4",
     "react-native-button": "^2.3.0",
     "react-native-camera": "^2.8.0",
+    "react-native-chart-kit": "^2.6.1",
     "react-native-modal": "^9.0.0",
     "react-native-pedometer": "0.0.7",
     "react-native-router-flux": "^4.0.6",
