--- a/wild5/package.json
+++ b/wild5/package.json
@@ -27,6 +27,7 @@
     "react-native-simple-stepper": "^2.1.3",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-svg": "^9.4.0",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "tcomb-form-native": "^0.6.20",
