--- a/wild5/package.json
+++ b/wild5/package.json
@@ -30,6 +30,7 @@
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
+    "react-svg-radar-chart": "^1.2.0",
     "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2"
   },
