--- a/wild5expo/package.json
+++ b/wild5expo/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "firebase": "^6.0.4",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-modal": "^11.0.1",
+    "react-native-router-flux": "^4.0.6",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
