--- a/wild5/package.json
+++ b/wild5/package.json
@@ -21,6 +21,7 @@
         "react-native-camera": "^2.9.0",
         "react-native-chart-kit": "^2.6.1",
         "react-native-ios-charts": "^0.3.0",
+        "react-native-material-dropdown": "^0.11.1",
         "react-native-modal": "^9.0.0",
         "react-native-pedometer": "0.0.7",
         "react-native-router-flux": "^4.0.6",
