--- a/wild5/package.json
+++ b/wild5/package.json
@@ -12,7 +12,9 @@
     "entypo": "^2.1.0",
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
+    "i": "^0.3.6",
     "native-base": "^2.12.1",
+    "npm": "^6.9.0",
     "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-chartjs-2": "^2.7.6",
@@ -22,7 +24,6 @@
     "react-native-chart-kit": "^2.6.1",
     "react-native-ios-charts": "^0.3.0",
     "react-native-modal": "^9.0.0",
-    "react-native-pedometer": "0.0.7",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
@@ -31,6 +32,7 @@
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-video": "^4.4.1",
     "react-svg-radar-chart": "^1.2.0",
     "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2",
