--- a/wild5/package.json
+++ b/wild5/package.json
@@ -21,7 +21,9 @@
     "react-native-camera": "^2.9.0",
     "react-native-chart-kit": "^2.6.1",
     "react-native-ios-charts": "^0.3.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^9.0.0",
+    "react-native-numeric-input": "^1.8.0",
     "react-native-pedometer": "0.0.7",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
@@ -31,6 +33,7 @@
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-video": "^4.4.1",
     "react-svg-radar-chart": "^1.2.0",
     "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2",
