--- a/wild5/package.json
+++ b/wild5/package.json
@@ -25,12 +25,13 @@
     "react-native-modal": "^9.0.0",
     "react-native-numeric-input": "^1.8.0",
     "react-native-pedometer": "0.0.7",
+    "react-native-push-notification": "^3.1.3",
     "react-native-push-notifications": "^3.0.10",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
     "react-native-snap-carousel": "^3.7.5",
-    "react-native-svg": "^9.4.0",
+    "react-native-svg": "^9.5.1",
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
