--- a/wild5/package.json
+++ b/wild5/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-native": "0.59.4",
+    "react-native-animate-number": "^0.1.2",
     "react-native-button": "^2.3.0",
     "react-native-camera": "^2.9.0",
     "react-native-chart-kit": "^2.6.1",
