--- a/wild5/package.json
+++ b/wild5/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/audio-toolkit": "^2.0.1",
     "chart.js": "^2.8.0",
     "entypo": "^2.1.0",
     "expo": "^32.0.6",
@@ -35,12 +36,12 @@
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
     "react-native-snap-carousel": "^3.7.5",
+    "react-native-sound": "^0.10.12",
     "react-native-store-photos-album": "^0.1.2",
     "react-native-svg": "^9.5.1",
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.5.0",
-    "react-native-video": "^4.4.1",
     "react-svg-radar-chart": "^1.2.0",
     "tcomb-form-native": "^0.6.20",
     "toggle-switch-react-native": "^2.0.2",
