--- a/wild5/package.json
+++ b/wild5/package.json
@@ -28,6 +28,7 @@
     "react-native-ios-charts": "^0.3.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.0.2",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-numeric-input": "^1.8.0",
     "react-native-pedometer": "0.0.7",
     "react-native-push-notification": "^3.1.3",
