--- a/wild5/package.json
+++ b/wild5/package.json
@@ -13,7 +13,6 @@
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
     "native-base": "^2.12.1",
-    "proptypes": "^1.1.0",
     "react": "16.8.3",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
@@ -57,6 +56,7 @@
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
+    "prop-types": "15.7.2",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
