--- a/wild5/package.json
+++ b/wild5/package.json
@@ -26,7 +26,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
     "react-native-ios-charts": "^0.3.0",
-    "react-native-linear-gradient": "2.5.4",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.0.2",
     "react-native-modal-datetime-picker": "^7.5.0",
