exercise lession text fixed

--- a/wild5/android/app/build.gradle
+++ b/wild5/android/app/build.gradle
@@ -138,7 +138,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-camera')
     implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-store-photos-album')
+    implementation project(':react-native-push-notifications')
+    implementation project(':react-native-push-notification')
+    implementation project(':react-native-contacts')
     implementation project(':react-native-sound')
     implementation project(':@react-native-community_audio-toolkit')
     implementation project(':react-native-svg')
