--- a/wild5/android/app/build.gradle
+++ b/wild5/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_slider')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-sound')
     implementation project(':@react-native-community_audio-toolkit')
