--- a/wild5/ios/wild5/Info.plist
+++ b/wild5/ios/wild5/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Wild5</string>
+	<string>KickStart30</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -76,8 +76,6 @@
 		<string>audio</string>
 		<string>remote-notification</string>
 	</array>
-	<key>kTCCServiceMediaLibrary</key>
-	<string>WE PLAY MUSIC</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
