--- a/wild5/package.json
+++ b/wild5/package.json
@@ -36,6 +36,7 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-simple-stepper": "^2.1.3",
+    "react-native-sms": "^1.9.0",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-sound": "^0.10.12",
     "react-native-store-photos-album": "^0.1.2",
