--- a/wild5/android/settings.gradle
+++ b/wild5/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'wild5'
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 include ':react-native-linear-gradient'
 project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
 include ':@react-native-community_slider'
