--- a/wild5/package.json
+++ b/wild5/package.json
@@ -10,6 +10,7 @@
     "@react-native-community/audio-toolkit": "^2.0.1",
     "@react-native-community/slider": "^1.1.4",
     "chart.js": "^2.8.0",
+    "date-fns": "1.30.1",
     "entypo": "^2.1.0",
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
