--- a/wild5/package.json
+++ b/wild5/package.json
@@ -14,6 +14,7 @@
     "entypo": "^2.1.0",
     "expo": "^32.0.6",
     "firebase": "^5.10.0",
+    "lodash": "4.17.15",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-chartjs-2": "^2.7.6",
