--- a/wild5/package.json
+++ b/wild5/package.json
@@ -18,7 +18,7 @@
     "react-native-animate-number": "0.1.2",
     "react-native-camera": "2.9.0",
     "react-native-chart-kit": "2.6.1",
-    "react-native-config": "0.11.7",
+    "react-native-config": "^0.11.7",
     "react-native-contacts": "4.0.2",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "1.1.0",
@@ -26,9 +26,11 @@
     "react-native-modal": "11.0.2",
     "react-native-modal-datetime-picker": "7.5.0",
     "react-native-numeric-input": "1.8.0",
+    "react-native-push-notification": "^3.1.3",
     "react-native-push-notifications": "3.0.10",
     "react-native-router-flux": "4.0.6",
     "react-native-simple-radio-button": "2.7.3",
+    "react-native-sms": "^1.9.0",
     "react-native-snap-carousel": "3.7.5",
     "react-native-sound": "0.10.12",
     "react-native-store-photos-album": "0.1.2",
