--- a/wild5/android/app/src/main/AndroidManifest.xml
+++ b/wild5/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.wild5">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
       android:name=".MainApplication"
