--- a/wild5/android/settings.gradle
+++ b/wild5/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'wild5'
+include ':react-native-push-notification'
+project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 include ':react-native-sms'
 project(':react-native-sms').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sms/android')
 include ':react-native-config'
