--- a/wild5/package.json
+++ b/wild5/package.json
@@ -16,7 +16,7 @@
     "react-dom": "16.8.6",
     "react-native": "0.59.4",
     "react-native-animate-number": "0.1.2",
-    "react-native-camera": "2.9.0",
+    "react-native-camera": "^3.0.0",
     "react-native-chart-kit": "2.6.1",
     "react-native-config": "0.11.7",
     "react-native-contacts": "4.0.2",
@@ -26,12 +26,13 @@
     "react-native-modal": "11.0.2",
     "react-native-modal-datetime-picker": "7.5.0",
     "react-native-numeric-input": "1.8.0",
-    "react-native-push-notifications": "3.0.10",
+    "react-native-push-notification": "^3.1.3",
     "react-native-router-flux": "4.0.6",
     "react-native-simple-radio-button": "2.7.3",
+    "react-native-sms": "^1.9.0",
     "react-native-snap-carousel": "3.7.5",
     "react-native-sound": "0.10.12",
-    "react-native-store-photos-album": "0.1.2",
+    "react-native-store-photos-album": "^0.1.2",
     "react-native-svg": "9.5.1",
     "react-native-svg-charts": "5.2.0",
     "react-native-typography": "1.4.1",
