--- a/wild5/android/gradle.properties
+++ b/wild5/android/gradle.properties
@@ -16,4 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-sdk.dir = /Users/abhiktiwari/Library/Android/sdk
+sdk.dir = /Users/bill/Library/Android/sdk
+android.useAndroidX=true
+android.enableJetifier=true
