--- a/wild5/package.json
+++ b/wild5/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/slider": "1.1.4",
+    "@react-native-community/slider": "^2.0.0",
     "chart.js": "2.8.0",
     "date-fns": "1.30.1",
     "entypo": "2.1.0",
@@ -49,6 +49,7 @@
     "@babel/runtime": "7.4.3",
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
+    "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "0.53.1",
     "prop-types": "15.7.2",
     "react-test-renderer": "16.8.3"
