--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "0.53.1",
     "prop-types": "15.7.2",
+    "react-native-bundle-visualizer": "^2.0.1",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
