--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,21 +35,12 @@ target 'wild5' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
-  # Required by RNFirebase
-pod 'Firebase/Core', '~> 6.3.0'
-pod 'Firebase/Auth', '~> 6.3.0'
-pod 'Firebase/Database', '~> 6.3.0'
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'  
 
-post_install do |installer|
-  rnfirebase = installer.pods_project.targets.find { |target| target.name == 'RNFirebase' }
-  rnfirebase.build_configurations.each do |config|
-    config.build_settings['HEADER_SEARCH_PATHS'] = '$(inherited) ${PODS_ROOT}/Headers/Public/**'
-  end
-end
-  # target 'wild5-tvOSTests' do
-  #   inherit! :search_paths
-  #   # Pods for testing
-  # end
+  # Required by RNFirebase
+  pod 'Firebase/Core', '~> 6.3.0'
+  pod 'Firebase/Auth', '~> 6.3.0'
+  pod 'Firebase/Database', '~> 6.3.0'
 
   target 'wild5Tests' do
     inherit! :search_paths
@@ -57,16 +48,3 @@ end
   end
 
 end
-
-# target 'wild5-tvOS' do
-#   # Comment the next line if you don't want to use dynamic frameworks
-#   use_frameworks!
-
-#   # Pods for wild5-tvOS
-
-#   target 'wild5-tvOSTests' do
-#     inherit! :search_paths
-#     # Pods for testing
-#   end
-
-# end
