--- a/ios/wild5/Info.plist
+++ b/ios/wild5/Info.plist
@@ -37,8 +37,6 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
-	<key>NSMainNibFile</key>
-	<string>LaunchScreen</string>
 	<key>NSMainNibFile~iphone</key>
 	<string>LaunchScreen</string>
 	<key>UIAppFonts</key>
@@ -59,6 +57,8 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
+	<key>UIMainStoryboardFile</key>
 	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
