--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.wild5">
+  package="com.wild5wellness.kickstart30">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
